# lodestar

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  README.md  pyproject.toml
docs/: 2026-04-17-progress-report.md  2026-04-20-progress-report.md  2026-04-21-progress-report.md  design.md  eval_2026-04-21.json  eval_2026-04-21.md  feedback-guide.md  golden_queries_review.md  instructions.md  network_template_guide.md  product-overview-2026-04-22.md  zero_recall_2026-04-21.md
docs/plans/: 2026-04-17-ambient-graph-interaction.md  2026-04-23-feedback-system-design.md  2026-04-23-feedback-system-plan.md
docs/raw/: 2026-04-20-progress-report.md  2026-04-21-progress-report.md  2026-04-22-progress-report.md
examples/: build_demo_network.py  build_template.py  contacts.xlsx  demo_network.xlsx  migrate_legacy_xlsx.py  pyq.xlsx  richard_network.xlsx  template.xlsx  tommy_network.xlsx
scripts/: build_silver_golden.py  debug_zero_recall.py  eval_search.py
src/lodestar/: __init__.py  cli.py  config.py  models.py  privacy.py
src/lodestar/db/: __init__.py  connection.py  repository.py  schema.py
src/lodestar/embedding/: __init__.py  base.py  openai_emb.py
src/lodestar/enrich/: __init__.py  anonymizer.py  client.py  extractor.py  normalizer.py  relationship_parser.py
src/lodestar/importers/: __init__.py  csv_importer.py  excel_importer.py
src/lodestar/llm/: __init__.py  base.py  goal_parser.py  openai_llm.py
src/lodestar/search/: __init__.py  bge_reranker.py  hybrid.py  path_finder.py  reranker.py
src/lodestar/ui/: __init__.py  render.py
src/lodestar/viz/: __init__.py  pyvis_export.py
src/lodestar/web/: __init__.py  app.py  enrich_jobs.py  feedback_markdown.py  feedback_snapshot.py  mount_unlock.py  owner_unlock.py  schemas.py
src/lodestar/web/static/: app.js  index.html  landing.css  landing.html  style.css
src/lodestar/web/static/modules/: api.js  constants.js  graph.js  state.js
tests/: conftest.py  test_excel_importer.py  test_feedback_endpoint.py  test_feedback_markdown.py  test_feedback_repo.py  test_feedback_schemas.py  test_feedback_snapshot.py  test_hybrid.py  test_importer.py  test_mount_unlock.py  test_owner_web_lock.py  test_path_finder.py  test_privacy.py  test_relationship_parser.py  test_repository.py  test_reranker.py  test_viz.py  test_web.py  test_web_relationships.py
tests/fixtures/: golden_queries.yaml
